Refactor/method getbyid (#17)
* refactor:split lot lookup by status and user-role

* test: GetByIDForBid and GetAll_Error

* feat: authentication to lot endpoint

* feat: swagger update
